# Tank

./: CMakeLists.txt  Play  Play.cpp  README.md  Tuning.cpp  Tuning.sh  main.cpp  merge.py  merged.cpp  tool.sh
Amazons/: amazons.cpp
json/: json-forwards.h  json.h  jsoncpp.cpp
src/: bot.cpp  bot.cpp.bak  bot.h  rule.cpp  rule.h  template.cpp  template.h  verdict.cpp
